# outreach-app

./: .gitignore  README.md  pyproject.toml
src/outreach/: __init__.py  __main__.py  cli.py  config.py
src/outreach/clients/: brevo_client.py  eazyreach_client.py  ocean_client.py  prospeo_client.py
src/outreach/mocks/: mock_clients.py
src/outreach/mocks/fixtures/: eazyreach_emails.json  ocean_companies.json  prospeo_contacts.json
src/outreach/models/: company.py  contact.py  pipeline_state.py
src/outreach/pipeline/: checkpoint.py  orchestrator.py
src/outreach/services/: dedupe.py  email_composer.py  rate_limit.py
src/outreach/stages/: base.py  brevo_stage.py  eazyreach_stage.py  ocean_stage.py  prospeo_stage.py
