[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "outreach-pipeline"
version = "0.1.0"
description = "Automated cold-outreach pipeline: Ocean.io → Prospeo → Eazyreach → Brevo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "brevo-python>=4.0.10",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "openai>=1.60.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "rich>=13.9.0",
    "tenacity>=9.0.0",
    "typer>=0.15.0",
]

[project.scripts]
outreach = "outreach.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/outreach"]
